--- a/aip/0008.md
+++ b/aip/0008.md
@@ -16,7 +16,7 @@ redirect_from:
 AIP stands for **API Improvement Proposal**, which is a design document
 providing high-level, concise documentation for API development. The goal is
 for these documents to serve as the source of truth for API-related
-documentation at Google and the way API teams discuss and come to consensus on
+documentation and the way API teams discuss and come to consensus on
 API guidance.
 
 AIPs are most useful when they are clear and concise, and cover a single topic
@@ -161,12 +161,6 @@ terms **should not** be used in other ways.
 more complete understanding, but **must not** contain guidance (and RFC-2119
 terms **must not** be used).
 
-### Code examples
-
-API design examples in AIPs **should** use [protocol buffers][]. Examples
-**should** cover only enough syntax to explain the concept. When using RPCs in
-examples, a `google.api.http` annotation **should** be included.
-
 ### Referencing AIPs
 
 When AIPs reference other AIPs, the prosaic text **must** use the format
@@ -181,7 +175,6 @@ viewing the Markdown file on GitHub, using the local development server, or a
 branch.
 
 [aip-1]: ./0001.md
-[protocol buffers]: https://developers.google.com/protocol-buffers/
 [rfc 2119]: https://www.ietf.org/rfc/rfc2119.txt
 
 ## Changelog
